fixed some  overlapping click events

--- a/css/mp.css
+++ b/css/mp.css
@@ -184,8 +184,8 @@ tbody td {
 	width: 100%;
 	min-height: 50px;
 	padding: 0 10px;
-  overflow: hidden;
-  box-shadow: var(--shadow);
+	overflow: hidden;
+	box-shadow: var(--shadow);
 }
 
 	.navbar.small {
@@ -303,14 +303,32 @@ tbody td {
 	}
 }
 
+.state-indicator {
+	position: absolute;
+	top: -999em;
+	left: -999em;
+}
+.state-indicator:before { content: 'desktop'; }
 
-/* Mobile */
-@media (max-width: 500px) {
-  .navbar .flex {
-    flex-direction: column;
-  }
-  .navbar ul {
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.1);
-  }
+/* small desktop */
+@media all and (max-width: 1200px) {
+	.state-indicator:before { content: 'small-desktop'; }
+}
+
+/* tablet */
+@media all and (max-width: 1024px) {
+	.state-indicator:before { content: 'tablet'; }
+}
+
+/* mobile phone */
+@media all and (max-width: 768px) {
+	.state-indicator:before { content: 'mobile'; }
+
+	.navbar .flex {
+		flex-direction: column;
+	}
+	.navbar ul {
+		padding: 10px;
+		background-color: rgba(0, 0, 0, 0.1);
+	}
 }
